objetos declarados y divs establecidos para primera fase: a) que se mueva coherentemente

--- a/index.html
+++ b/index.html
@@ -14,9 +14,22 @@
 </head>
 <body>
   <div class="board">
-<div class="car">
+<div class="car"></div>
 
-</div>
+
+<div class="bar one "></div>
+<div class="bar one d"></div>
+
+<div class="bar two "></div>
+<div class="bar two d"></div>
+
+<div class="bar tre "></div>
+<div class="bar tre d"></div>
+
+<div class="bar four "></div>
+<div class="bar four d"></div>
+
+
 
 
 
