--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="board.js"></script>
-  <script type="text/javascript" src="car.js"></script>
-  <script type="text/javascript" src="divs.js"></script>
-    <script type="text/javascript" src="main.js"></script>
   <title>My Game</title>
 </head>
 <body>
@@ -39,9 +35,9 @@
 
   </div>
 
-  <script type="text/javascript" src="board.js"></script>
+  <script type="text/javascript" src="game.js"></script>
   <script type="text/javascript" src="car.js"></script>
-  <script type="text/javascript" src="divs.js"></script>
+  <script type="text/javascript" src="wall.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
 
