modificaciones de mark para establecer (comentarios y demas en papel)

--- a/index.html
+++ b/index.html
@@ -1,44 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <script src="dist/jquery-3.2.1.min.js"></script>
   <title>My Game</title>
 </head>
+
 <body>
-  <div class="board">
-<div class="car"></div>
-
-
-<div class="bar one "></div>
-<div class="bar one d"></div>
-
-<div class="bar two "></div>
-<div class="bar two d"></div>
-
-<div class="bar tre "></div>
-<div class="bar tre d"></div>
-
-<div class="bar four "></div>
-<div class="bar four d"></div>
-
-
-
-
-
-
-
-
-
+  <div id="circuito">
   </div>
 
-  <script type="text/javascript" src="game.js"></script>
-  <script type="text/javascript" src="car.js"></script>
-  <script type="text/javascript" src="wall.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="js/game.js"></script>
+  <script type="text/javascript" src="js/car.js"></script>
+  <script type="text/javascript" src="js/wall.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
