--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <script src="dist/jquery-3.2.1.min.js"></script>
+  <script src="dist/Jquery-collisions.js"></script>
   <title>My Game</title>
 </head>
 
